# timesync

./: Cargo.toml
examples/: cli.rs
src/: client.rs  lib.rs  server.rs
