[package]
edition = "2021"
name = "timesync"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tokio"]
tokio = ["dep:tokio"]

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
humantime = "2.1.0"
rmp-serde = "1"
serde = {version = "1", features = ["derive"]}
tokio = {version = "1", optional = true, features = ["net", "sync", "time", "rt-multi-thread"]}
tracing = { version = "0.1.37", features = ["async-await"] }

[dev-dependencies]
anyhow = "1.0.68"
tokio = {version = "1", features = ["rt-multi-thread", "macros"]}
clap = { version = "4.0.29", features = ["derive"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
